--- a/app/src/main/res/layout/layout_health_manage.xml
+++ b/app/src/main/res/layout/layout_health_manage.xml
@@ -102,6 +102,7 @@
             android:textColor="@color/default_hint_color"/>
 
         <Button
+            android:id="@+id/btn_inquiry"
             android:layout_width="@dimen/dimen_70px"
             android:layout_height="@dimen/dimen_24px"
             android:background="@drawable/frame_blue"
