--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -36,6 +36,7 @@
     <string-array name="sex">
         <item>男</item>
         <item>女</item>
+        <item>保密</item>
     </string-array>
 
     <string-array name="navigation">
