--- a/app/src/main/res/layout/layout_health_shop_area.xml
+++ b/app/src/main/res/layout/layout_health_shop_area.xml
@@ -266,6 +266,7 @@
 
 
     <Button
+        android:id="@+id/btn_shop_index"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/dimen_30px"
         android:background="@drawable/frame_blue"
