--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:orientation="vertical">
 
@@ -24,12 +25,14 @@
                 android:background="@color/white"
                 android:padding="@dimen/dimen_16px">
 
-                <ImageView
+                <com.app.aihealthapp.view.CircleImageView
                     android:id="@+id/image_head"
-                    android:layout_width="@dimen/dimen_80px"
-                    android:layout_height="@dimen/dimen_80px"
+                    android:layout_width="@dimen/dimen_70px"
+                    android:layout_height="@dimen/dimen_70px"
                     android:layout_centerVertical="true"
-                    android:background="@mipmap/my_head" />
+                    android:background="@mipmap/my_head"
+                    app:border_color="@color/transparent"
+                    />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -335,7 +338,36 @@
                     android:layout_marginRight="@dimen/dimen_16px"
                     android:background="@mipmap/my_arrow" />
             </RelativeLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_0.5px"
+                android:background="@color/view_line" />
 
+            <RelativeLayout
+                android:id="@+id/rt_address"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_50px"
+                android:background="@drawable/selector_onclick">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="@dimen/dimen_16px"
+                    android:drawableLeft="@mipmap/mind_xxtx_icon"
+                    android:drawablePadding="@dimen/text_10px"
+                    android:text="收货地址"
+                    android:textColor="@color/text_color"
+                    android:textSize="@dimen/text_14px" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/dimen_16px"
+                    android:background="@mipmap/my_arrow" />
+            </RelativeLayout>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_0.5px"
