--- a/app/src/main/res/layout/include_main_toolbar.xml
+++ b/app/src/main/res/layout/include_main_toolbar.xml
@@ -17,4 +17,9 @@
         android:textColor="@color/text_color"
         android:textSize="@dimen/text_18px" />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@mipmap/home_notice"
+        android:visibility="gone"/>
 </RelativeLayout>
