--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -5,8 +5,8 @@
     <string-array name="tab">
         <item>首页</item>
         <item>健康管理</item>
-        <item>健康论坛</item>
         <item>健康商城</item>
+        <item>健康商圈</item>
         <item>个人中心</item>
     </string-array>
 
