--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -41,7 +41,6 @@
                     android:layout_marginLeft="@dimen/text_16px"
                     android:layout_toRightOf="@+id/image_head"
                     android:orientation="vertical">
-
                     <TextView
                         android:id="@+id/tv_user_name"
                         android:layout_width="wrap_content"
@@ -49,7 +48,14 @@
                         android:text="点击登录"
                         android:textColor="@color/text_color"
                         android:textSize="@dimen/text_16px" />
-
+                    <TextView
+                        android:id="@+id/tv_invite_code"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/dimen_8px"
+                        android:text=""
+                        android:textColor="@color/default_hint_color"
+                        android:textSize="@dimen/text_14px" />
                     <Button
                         android:id="@+id/btn_authentication"
                         android:layout_width="@dimen/dimen_70px"
@@ -59,7 +65,7 @@
                         android:text="认证会员"
                         android:textColor="@color/white"
                         android:textSize="@dimen/text_10px"
-                        android:visibility="gone"/>
+                        android:visibility="visible"/>
                 </LinearLayout>
             </RelativeLayout>
 
