--- a/app/src/main/res/layout/fragement_home.xml
+++ b/app/src/main/res/layout/fragement_home.xml
@@ -118,7 +118,7 @@
                         <ImageView
                             android:layout_width="@dimen/dimen_50px"
                             android:layout_height="@dimen/dimen_50px"
-                            android:background="@mipmap/home_xycl_icon"
+                            android:background="@mipmap/home_xyacl_icon"
                             android:scaleType="centerCrop" />
 
                         <TextView
