--- a/app/src/main/res/layout/layout_home_shop_item.xml
+++ b/app/src/main/res/layout/layout_home_shop_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_frame_black"
     android:orientation="vertical"
@@ -9,9 +9,9 @@
     <ImageView
         android:id="@+id/image_goods"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:background="@mipmap/shop"
+        android:layout_height="100dp"
         android:scaleType="centerCrop"
+        android:layout_margin="@dimen/dimen_2px"
         />
 
 
@@ -75,6 +75,7 @@
             android:layout_centerVertical="true"
             android:text="立即购买"
             android:textColor="@color/default_text_color"
-            android:textSize="@dimen/text_10px"/>
+            android:textSize="@dimen/text_10px"
+            android:visibility="gone"/>
     </RelativeLayout>
 </LinearLayout>
