--- a/app/src/main/res/layout/include_main_toolbar.xml
+++ b/app/src/main/res/layout/include_main_toolbar.xml
@@ -6,6 +6,18 @@
     android:background="@color/white"
     >
 
+
+    <ImageView
+        android:id="@+id/img_back"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_centerVertical="true"
+        android:background="@drawable/selector_onclick"
+        android:paddingLeft="@dimen/dimen_20px"
+        android:paddingRight="@dimen/dimen_20px"
+        android:src="@mipmap/arrow"
+        android:visibility="gone"/>
+
     <TextView
         android:id="@+id/tv_title_bar"
         style="@style/WrapWrap"
